[package]
name = "arrakis"
version = "0.5.0"
edition = "2024"
description = "A Rust client library for the Dune Analytics API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aoikurokawa/arrakis"
keywords = ["dune", "analytics", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
